--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["eyehide", "pmedium", "psemibold"]
+  "cSpell.words": ["Animatable", "Appwrite", "eyehide", "pmedium", "psemibold"]
 }
